Updated push replication web example poms for release.